--- a/index.html
+++ b/index.html
@@ -8,7 +8,12 @@
 </head>
 <body>
 
-<p class="red">fefe</p>
+<form>
+    <label for="fname">Username:</label><br>
+    <input type="text" id="fname" name="fname"><br>
+    <label for="lname">Password:</label><br>
+    <input type="text" id="lname" name="lname">
+</form>
 
 
 <script src="js/main.js"></script>
