--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 <div class="container">
     <div class="login">
+        <p>jwIAKDpQjq</p>
         <label for="fname">Username:</label><br>
         <input type="text" id="fname" name="fname" class="inputUsername"><br>
         <label for="lname">Password:</label><br>
