--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <div class="chat">
         <div class="messages"></div>
         <div class="chatForm">
-            <input type="text" id="message" name="message" class="inputMessage">
+            <input type="text" id="message" name="message" class="inputMessage" placeholder="let's talk">
             <button class="sendBtn">Send</button>
         </div>
     </div>
