add style to login page

--- a/index.html
+++ b/index.html
@@ -12,10 +12,8 @@
 <div class="container">
     <div class="login">
         <p>jwIAKDpQjq</p>
-        <label for="fname">Username:</label><br>
-        <input type="text" id="fname" name="fname" class="inputUsername"><br>
-        <label for="lname">Password:</label><br>
-        <input type="password" id="lname" name="lname" class="inputPassword">
+        <input type="text" id="fname" name="fname" class="inputUsername" placeholder="Username"><br>
+        <input type="password" id="lname" name="lname" class="inputPassword" placeholder="Password"><br>
         <button class="loginBtn">Login</button>
     </div>
 
