prompt disappear when submit

--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             <input type="text" id="message" name="message" class="inputMessage" placeholder="let's talk">
             <button class="sendBtn">Send</button>
         </div>
+        <button class="switchEnglish">english</button>
     </div>
 </div>
 
