--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
     <div class="chat">
         <div class="messages"></div>
+        <div class="anime"></div>
         <div class="chatForm">
             <input type="text" id="message" name="message" class="inputMessage" placeholder="let's talk">
             <button class="sendBtn">Send</button>
