add image for the waiting animation

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
 
     <div class="chat">
         <div class="messages"></div>
-        <div class="anime"></div>
+        <div>
+            <img src="image/adventure_time_snail-removebg-preview.png" alt="escargot" class="anime">
+        </div>
         <div class="chatForm">
             <input type="text" id="message" name="message" class="inputMessage" placeholder="let's talk">
             <button class="sendBtn">Send</button>
