--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
 </head>
 <body>
 
-
+<div class="header">
+    <img src="https://picsum.photos/100" alt="" class="logo">
+</div>
 <div class="container">
+    <h1 class="title">BEEMO</h1>
     <div class="login">
         <input type="text" id="fname" name="fname" class="inputUsername" placeholder="Username"><br>
         <input type="password" id="lname" name="lname" class="inputPassword" placeholder="Password"><br>
@@ -18,10 +21,8 @@
 
     <div class="chat">
         <div class="messages"></div>
-        <div>
-            <img src="image/adventure_time_snail-removebg-preview.png" alt="escargot" class="anime">
-        </div>
         <div class="chatForm">
+            <img src="image/adventure_time_snail-removebg-preview.png" alt="escargot" class="anime">
             <input type="text" id="message" name="message" class="inputMessage" placeholder="let's talk">
             <button class="sendBtn">Send</button>
         </div>
